--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -9,15 +9,15 @@
     "node": ">=18",
     "npm": ">=8"
   },
-  "main": "./dist/index.js",
+  "main": "./build/index.js",
   "scripts": {
-    "build": "rm -rf ./dist/ && tsc -b tsconfig.build.json",
-    "postbuild": "cp ./src/processors/MongoDbUserQueryPreprocessorResponse.ts ./dist/processors/",
+    "build": "rm -rf ./build/ && tsc -b tsconfig.build.json",
+    "postbuild": "cp ./src/processors/MongoDbUserQueryPreprocessorResponse.ts ./build/processors/",
     "dev": "nodemon src/index.ts",
     "format": "prettier ./src --write",
     "format:check": "prettier ./src --check",
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
-    "start": "pm2-runtime ./dist/index.js",
+    "start": "pm2-runtime ./build/index.js",
     "test": "jest --forceExit",
     "test:llmQualitative": "jest --config jest.config.llmQualitative.js --forceExit src/llmQualitativeTests/qualitative.test.ts",
     "test:llmQualitative:top": "RUN_TOP=true npm run test:llmQualitative",
