--- a/packages/mongodb-chatbot-server/jest.config.json
+++ b/packages/mongodb-chatbot-server/jest.config.json
@@ -2,5 +2,5 @@
   "preset": "ts-jest",
   "setupFiles": ["<rootDir>/src/test/jestEnvSetUp.ts"],
   "setupFilesAfterEnv": ["<rootDir>/src/test/jestSetUp.ts"],
-  "testPathIgnorePatterns": ["<rootDir>/dist"]
+  "testPathIgnorePatterns": ["<rootDir>/build"]
 }
