--- a/packages/mongodb-rag-core/.gitignore
+++ b/packages/mongodb-rag-core/.gitignore
@@ -88,7 +88,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+build
 
 # Gatsby files
 .cache/
@@ -97,7 +97,7 @@ dist
 # public
 
 # vuepress build output
-.vuepress/dist
+.vuepress/build
 
 # Serverless directories
 .serverless/
