--- a/packages/chatbot-server-mongodb-public/jest.config.json
+++ b/packages/chatbot-server-mongodb-public/jest.config.json
@@ -3,7 +3,7 @@
   "setupFiles": ["<rootDir>/src/jestEnvSetUp.ts"],
   "setupFilesAfterEnv": ["<rootDir>/src/jestSetUp.ts"],
   "testPathIgnorePatterns": [
-    "<rootDir>/dist",
+    "<rootDir>/build",
     "<rootDir>/src/llmQualitativeTests"
   ]
 }
