--- a/packages/mongodb-chatbot-ui/tsconfig.json
+++ b/packages/mongodb-chatbot-ui/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./build",
     "module": "ESNext",
 
     /* Bundler mode */
