Use build ts config so .test files are not built
We leave them included in the main tsconfig so that the IDE/linter/etc knows to work on them

--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -27,8 +27,7 @@
   "main": "./build/index.js",
   "scripts": {
     "clean": "rm -rf build",
-    "build": "tsc -b",
-    "watch": "tsc -b -w",
+    "build": "tsc -b tsconfig.build.json",
     "test": "jest",
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
     "release": "release-it"
