--- a/packages/ingest-mongodb-public/package.json
+++ b/packages/ingest-mongodb-public/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -b",
     "watch": "tsc -b -w",
     "release": "release-it",
+    "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "ingest:all": "ingest all --config ./build/config.js",
     "ingest:k8s": "../../node_modules/mongodb-rag-ingest/build/main.js all --config ./build/config.js",
     "ingest:pages": "ingest pages --config ./build/config.js",
