update build to create component

--- a/packages/mongodb-chatbot-ui/.release-it.json
+++ b/packages/mongodb-chatbot-ui/.release-it.json
@@ -21,7 +21,7 @@
   "hooks": {
     "before:init": [
       "pushd ../mongodb-rag-core && npm i && npm run build && popd",
-      "npm run build:component",
+      "npm run build",
       "npm run lint"
     ]
   }
