--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-chatbot-ui",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "UI React components for the MongoDB Chatbot Framework",
   "author": "MongoDB, Inc.",
   "license": "Apache-2.0",
@@ -54,7 +54,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "release:interactive": "release-it",
-    "release": "release-it --ci",
+    "release": "release-it",
     "test": "vitest run",
     "test:watch": "vitest"
   },
