--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -98,6 +98,7 @@
     "@lg-chat/leafygreen-chat-provider": "^1.0.2",
     "@lg-chat/message": "^2.0.8",
     "@lg-chat/message-feed": "^2.0.7",
+    "@lg-chat/message-feedback": "^1.0.0",
     "@lg-chat/message-prompts": "^1.0.2",
     "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
