Include tsx files in tsconfig

--- a/packages/mongodb-chatbot-ui/tsconfig.json
+++ b/packages/mongodb-chatbot-ui/tsconfig.json
@@ -20,5 +20,5 @@
     "noImplicitReturns": true,
     "noImplicitThis": true
   },
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
