(EAI-51): Globalize TypeScript and eslint config (#299)
* Checkpoint

* dist -> build

* Use build ts config so .test files are not built

We leave them included in the main tsconfig so that the IDE/linter/etc knows to work on them

* Create (and use) shared .eslintrc

* Don't try to share jest config

* Formatting errors are now yellow squiggles

* Fix more lint problems

* Update package-lock

* Include tsx files in tsconfig

* Add build/ to root gitignore

--- a/packages/mongodb-chatbot-ui/tsconfig.json
+++ b/packages/mongodb-chatbot-ui/tsconfig.json
@@ -1,10 +1,8 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2021", "DOM", "DOM.Iterable"],
+    "outDir": "./build",
     "module": "ESNext",
-    "skipLibCheck": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -15,14 +13,12 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
-    "noImplicitThis": true,
+    "noImplicitThis": true
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
