--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -27,9 +27,9 @@
   "main": "./build/index.js",
   "scripts": {
     "clean": "rm -rf build",
-    "build": "tsc -b",
-    "watch": "tsc -b -w",
+    "build": "tsc -b tsconfig.build.json",
     "test": "jest",
+    "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
     "release": "release-it"
   },
