--- a/packages/scripts/environments/production.yml
+++ b/packages/scripts/environments/production.yml
@@ -42,7 +42,7 @@ cronJobs:
         cpu: 500m
         memory: 5Gi
 
-  - name: findFaq
+  - name: find-faq
     schedule: "0 8 * * *" # every day at 8am UTC
     command: ["npm", "run", "scripts:findFaq"]
     env:
