--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
     "common-tags": "^1.8.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -50,6 +51,7 @@
     "@release-it/bumper": "^5.1.0",
     "@types/common-tags": "^1.8.1",
     "@types/connect-timeout": "^0.0.37",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-slow-down": "^1.3.2",
