--- a/packages/ingest-mongodb-public/package.json
+++ b/packages/ingest-mongodb-public/package.json
@@ -18,11 +18,13 @@
     "ingest:all": "ingest all --config ./build/config.js",
     "ingest:k8s": "../../node_modules/mongodb-rag-ingest/build/main.js all --config ./build/config.js",
     "ingest:pages": "ingest pages --config ./build/config.js",
-    "ingest:embed": "ingest embed --config ./build/config.js"
+    "ingest:embed": "ingest embed --config ./build/config.js",
+    "test": "jest --forceExit"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7.22.5",
+    "@types/jest": "^29.5.2",
     "@types/node": "^12",
     "@types/node-fetch": "^2.6.4",
     "@types/turndown": "^5.0.2",
@@ -33,8 +35,10 @@
     "eslint-plugin-jsdoc": "^46.4.5",
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
+    "jest": "^29.5.0",
     "prettier": "^2",
     "release-it": "^16.1.5",
+    "ts-jest": "^29.1.0",
     "typescript": "^5"
   },
   "dependencies": {
