--- a/packages/mongodb-chatbot-server/tsconfig.json
+++ b/packages/mongodb-chatbot-server/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./build"
+    "outDir": "./build",
+    "lib": ["ES2023"],
   },
   "include": ["./src/**/*.ts"]
 }
