Update git tag used to deploy chatbot-server-mongodb-public to prod

--- a/.drone.yml
+++ b/.drone.yml
@@ -286,7 +286,7 @@ trigger:
     - production
   ref:
     include:
-      - refs/tags/chat-server-v*
+      - refs/tags/chatbot-server-mongodb-public-v*
 
 steps:
   # Deploys Docker image associated with production build that triggered promotion
