--- a/packages/mongodb-chatbot-server/package.json
+++ b/packages/mongodb-chatbot-server/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
+    "@langchain/core": "^0.1.25",
     "common-tags": "^1.8.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -45,7 +46,7 @@
     "express-slow-down": "^1.6.0",
     "gpt3-tokenizer": "^1.1.5",
     "ip-address": "^8.1.0",
-    "langchain": "^0.1.13",
+    "langchain": "^0.1.16",
     "lodash.clonedeep": "^4.5.0",
     "mongodb-rag-core": "*",
     "openai": "^3.2.1",
