--- a/.drone.yml
+++ b/.drone.yml
@@ -24,7 +24,7 @@ steps:
     environment:
       PORT: 3000
       OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
-      OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
+      OPENAI_EMBEDDING_MODEL_VERSION: "2023-05-15"
       MONGODB_DATABASE_NAME: docs-chatbot-test
       VECTOR_SEARCH_INDEX_NAME: vector_index
       OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
