--- a/packages/mongodb-chatbot-server/.env.example
+++ b/packages/mongodb-chatbot-server/.env.example
@@ -5,7 +5,7 @@ OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
 OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 OPENAI_EMBEDDING_MODEL_VERSION=2023-03-15-preview
 OPENAI_CHAT_COMPLETION_DEPLOYMENT=<deployment_name>
-OPENAI_CHAT_COMPLETION_MODEL_VERSION=<model_version>
+OPENAI_CHAT_COMPLETION_MODEL_VERSION=2023-05-15
 MONGODB_CONNECTION_URI=<connection_uri>
 MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
