--- a/packages/mongodb-chatbot-eval/package.json
+++ b/packages/mongodb-chatbot-eval/package.json
@@ -47,8 +47,13 @@
     "url": "https://github.com/mongodb/chatbot/issues"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "jest": "^29.7.0",
-    "mongodb-rag-core": "*"
+    "mongodb-chatbot-server": "*",
+    "mongodb-rag-core": "*",
+    "supertest": "^6.3.4",
+    "yaml": "^2.3.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "dotenv": "^16.4.4"
