--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -15,7 +15,7 @@
     "watch": "tsc -b -w",
     "release": "release-it",
     "lint": "eslint ./src --ext ts --report-unused-disable-directives",
-    "eval:generate-conversations": "eval generate --name conversations --config ./build/eval.config.js",
+    "generate-conversations": "eval generate --name conversations --config ./build/eval.config.js",
     "test": "jest --forceExit"
   },
   "devDependencies": {
@@ -40,6 +40,8 @@
   "dependencies": {
     "dotenv": "^16",
     "mongodb-rag-core": "*",
-    "mongodb-chatbot-server": "*"
+    "mongodb-chatbot-server": "*",
+    "mongodb-chatbot-eval": "*",
+    "chatbot-server-mongodb-public": "*"
   }
 }
