--- a/packages/mongodb-chatbot-eval/package.json
+++ b/packages/mongodb-chatbot-eval/package.json
@@ -47,6 +47,7 @@
     "url": "https://github.com/mongodb/chatbot/issues"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mongodb-chatbot-server": "*",
