fix merge conflict

--- a/packages/chatbot-eval-mongodb-public/.env.example
+++ b/packages/chatbot-eval-mongodb-public/.env.example
@@ -1,3 +1,6 @@
 MONGODB_CONNECTION_URI=<some URI>
 MONGODB_DATABASE_NAME=<some DB>
 CONVERSATIONS_SERVER_BASE_URL="http://localhost:3000/api/v1"
+OPENAI_CHAT_COMPLETION_DEPLOYMENT=some chatgpt api deployment
+OPENAI_ENDPOINT=<Some endpoint>
+OPENAI_API_KEY=<some api key>
