--- a/packages/mongodb-chatbot-eval/package.json
+++ b/packages/mongodb-chatbot-eval/package.json
@@ -47,7 +47,9 @@
     "url": "https://github.com/mongodb/chatbot/issues"
   },
   "dependencies": {
+    "@azure/openai": "^1.0.0-beta.11",
     "axios": "^1.6.7",
+    "common-tags": "^1.8.2",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mongodb-chatbot-server": "*",
