--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -18,63 +18,36 @@
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
     "start": "pm2-runtime ./build/index.js",
     "test": "jest --forceExit",
-    "test:llmQualitative": "jest --config jest.config.llmQualitative.js --forceExit src/llmQualitativeTests/qualitative.test.ts",
-    "test:llmQualitative:top": "RUN_TOP=true npm run test:llmQualitative",
-    "test:llmQualitative:utils": "RUN_TOP=true jest --config jest.config.llmQualitative.js --forceExit --testPathIgnorePatterns src/llmQualitativeTests/qualitative.test.ts",
     "release": "release-it"
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
     "common-tags": "^1.8.2",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.10.0",
-    "gpt3-tokenizer": "^1.1.5",
-    "ip-address": "^8.1.0",
-    "langchain": "^0.1.16",
-    "lodash.clonedeep": "^4.5.0",
     "mongodb-chatbot-server": "*",
-    "openai": "^3.2.1",
-    "pm2": "^5.3.0",
-    "rate-limit-mongo": "^2.3.2",
-    "stream-json": "^1.8.0",
-    "winston": "^3.9.0",
-    "zod-error": "^1.5.0"
+    "pm2": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
-    "@release-it/bumper": "^5.1.0",
     "@types/common-tags": "^1.8.1",
-    "@types/connect-timeout": "^0.0.37",
     "@types/cookie-parser": "^1.4.6",
-    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
-    "@types/express-slow-down": "^1.3.2",
     "@types/jest": "^29.5.2",
-    "@types/lodash.clonedeep": "^4.5.7",
-    "@types/stream-json": "^1.7.3",
-    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "babel-jest": "^29.5.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
-    "express-slow-down": "^1.6.0",
     "jest": "^29.6.1",
-    "mongodb-memory-server": "^8.12.2",
-    "node-mocks-http": "^1.12.2",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.7",
     "release-it": "^16.1.5",
-    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.3",
-    "yaml": "^2.3.1"
+    "typescript": "^5.0.3"
   }
 }
