--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "generate:conversations": "../mongodb-chatbot-eval/build/main.js generate --name conversations --config ./build/eval.config.js",
     "eval:conversation-quality": "../mongodb-chatbot-eval/build/main.js evaluate --name conversationQuality --config ./build/eval.config.js",
-    "report:conversationQualityRun": "../mongodb-chatbot-eval/build/main.js report --name conversationQualityRun --config ./build/eval.config.js"
+    "report:conversationQualityRun": "../mongodb-chatbot-eval/build/main.js report --name conversationQualityRun --config ./build/eval.config.js",
+    "pipeline:conversationQualityCheck": "node ./build/pipelines/conversationQualityCheck.js"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
