--- a/packages/mongodb-chatbot-eval/package.json
+++ b/packages/mongodb-chatbot-eval/package.json
@@ -52,6 +52,7 @@
     "common-tags": "^1.8.2",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "llamaindex": "^0.1.19",
     "mongodb-chatbot-server": "*",
     "mongodb-rag-core": "*",
     "supertest": "^6.3.4",
