--- a/packages/chatbot-eval-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-eval-mongodb-public/environments/staging.yml
@@ -7,13 +7,13 @@ cronJobs:
     schedule: "0 4 * * *" # every day at 4am UTC (11PM EST)
     command: ["npm", "run", "eval:conversationQualityCheckPipeline"]
     env:
-      MONGODB_DATABASE_NAME: docs-chatbot-prod
+      MONGODB_DATABASE_NAME: docs-chatbot-staging
       CONVERSATIONS_SERVER_BASE_URL: "https://chat-server.docs.staging.corp.mongodb.com/api/v1"
     envSecrets:
-      MONGODB_CONNECTION_URI: docs-chatbot-prod
-      OPENAI_ENDPOINT: docs-chatbot-prod
-      OPENAI_API_KEY: docs-chatbot-prod
-      OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-prod
+      MONGODB_CONNECTION_URI: docs-chatbot-staging
+      OPENAI_ENDPOINT: docs-chatbot-staging
+      OPENAI_API_KEY: docs-chatbot-staging
+      OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
 
     resources:
       # guaranteed amount of resources
