--- a/packages/chatbot-eval-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-eval-mongodb-public/environments/staging.yml
@@ -8,7 +8,7 @@ cronJobs:
     command: ["npm", "run", "eval:conversationQualityCheckPipeline"]
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-staging
-      CONVERSATIONS_SERVER_BASE_URL: "https://chat-server.docs.staging.corp.mongodb.com/api/v1"
+      CONVERSATIONS_SERVER_BASE_URL: "https://knowledge.staging.corp.mongodb.com/api/v1"
     envSecrets:
       MONGODB_CONNECTION_URI: docs-chatbot-staging
       OPENAI_ENDPOINT: docs-chatbot-staging
