--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -16,9 +16,11 @@
     "release": "release-it",
     "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "generate:conversations": "../mongodb-chatbot-eval/build/main.js generate --name conversations --config ./build/eval.config.js",
-    "eval:conversation-quality": "../mongodb-chatbot-eval/build/main.js evaluate --name conversationQuality --config ./build/eval.config.js",
+    "generate:faqConversations": "../mongodb-chatbot-eval/build/main.js generate --name faqConversations --config ./build/eval.config.js",
     "report:conversationQualityRun": "../mongodb-chatbot-eval/build/main.js report --name conversationQualityRun --config ./build/eval.config.js",
-    "pipeline:conversationQualityCheck": "node ./build/pipelines/conversationQualityCheck.js"
+    "eval:conversationQuality": "../mongodb-chatbot-eval/build/main.js evaluate --name conversationQuality --config ./build/eval.config.js",
+    "pipeline:conversationQualityCheck": "node ./build/pipelines/conversationQualityCheck.js",
+    "pipeline:faqConversationQualityCheck": "node ./build/pipelines/faqConversationQualityCheck.js"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
