--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "scripts:getConversationText": "lerna run --scope='scripts' getConversationText -- ",
     "scripts:removeTestDatabases": "lerna run --scope='scripts' removeTestDatabases -- ",
     "server:start": "lerna run start --scope='chatbot-server-mongodb-public'",
-    "eval:conversationQualityCheckPipeline": "lerna run pipeline:conversationQualityCheck --scope='chatbot-eval-mongodb-public'"
+    "eval:conversationQualityCheckPipeline": "lerna run pipeline:conversationQualityCheck --scope='chatbot-eval-mongodb-public'",
+    "eval:faqConversationQualityCheckPipeline": "lerna run pipeline:faqConversationQualityCheck --scope='chatbot-eval-mongodb-public'"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
