--- a/packages/chatbot-eval-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-eval-mongodb-public/environments/staging.yml
@@ -24,6 +24,27 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+  - name: eval-quality
+    schedule: "30 4 * * *" # every day at 4am UTC (11PM EST)
+    command: ["npm", "run", "eval:conversationQualityCheckPipeline"]
+    env:
+      MONGODB_DATABASE_NAME: docs-chatbot-staging
+      CONVERSATIONS_SERVER_BASE_URL: "http://chat-server-staging-web-app:80/api/v1"
+    envSecrets:
+      MONGODB_CONNECTION_URI: docs-chatbot-staging
+      OPENAI_ENDPOINT: docs-chatbot-staging
+      OPENAI_API_KEY: docs-chatbot-staging
+      OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
+
+    resources:
+      # guaranteed amount of resources
+      requests:
+        cpu: 100m
+        memory: 2Gi
+      # maximum allowed resources
+      limits:
+        cpu: 500m
+        memory: 5Gi
 
 # Alerts
 defaultAlerts:
