--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -18,7 +18,9 @@
     "generate:conversations": "../mongodb-chatbot-eval/build/main.js generate --name conversations --config ./build/eval.config.js",
     "generate:faqConversations": "../mongodb-chatbot-eval/build/main.js generate --name faqConversations --config ./build/eval.config.js",
     "report:conversationQualityRun": "../mongodb-chatbot-eval/build/main.js report --name conversationQualityRun --config ./build/eval.config.js",
+    "report:conversationFaithfulnessRun": "../mongodb-chatbot-eval/build/main.js report --name conversationFaithfulnessRun --config ./build/eval.config.js",
     "eval:conversationQuality": "../mongodb-chatbot-eval/build/main.js evaluate --name conversationQuality --config ./build/eval.config.js",
+    "eval:conversationFaithfulness": "../mongodb-chatbot-eval/build/main.js evaluate --name conversationFaithfulness --config ./build/eval.config.js",
     "pipeline:conversationQualityCheck": "node ./build/pipelines/conversationQualityCheck.js",
     "pipeline:faqConversationQualityCheck": "node ./build/pipelines/faqConversationQualityCheck.js"
   },
@@ -45,6 +47,7 @@
     "@azure/openai": "^1.0.0-beta.11",
     "chatbot-server-mongodb-public": "*",
     "dotenv": "^16",
+    "llamaindex": "^0.1.21",
     "mongodb-chatbot-eval": "*",
     "mongodb-chatbot-server": "*",
     "mongodb-rag-core": "*"
