--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -59,18 +59,7 @@
     "test:watch": "vitest"
   },
   "bundleDependencies": [
-    "mongodb-rag-core",
-    "@lg-chat/avatar",
-    "@lg-chat/chat-window",
-    "@lg-chat/chat-disclaimer",
-    "@lg-chat/fixed-chat-window",
-    "@lg-chat/input-bar",
-    "@lg-chat/leafygreen-chat-provider",
-    "@lg-chat/message",
-    "@lg-chat/message-feed",
-    "@lg-chat/message-feedback",
-    "@lg-chat/message-prompts",
-    "@lg-chat/message-rating"
+    "mongodb-rag-core"
   ],
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -91,17 +80,17 @@
     "@leafygreen-ui/text-input": "^12.1.18",
     "@leafygreen-ui/toggle": "^10.0.15",
     "@leafygreen-ui/typography": "^16.5.4",
-    "@lg-chat/avatar": "^2.0.6",
-    "@lg-chat/chat-disclaimer": "^2.0.0",
-    "@lg-chat/chat-window": "^1.0.4",
-    "@lg-chat/fixed-chat-window": "^1.1.1",
-    "@lg-chat/input-bar": "^3.2.6",
-    "@lg-chat/leafygreen-chat-provider": "^1.0.2",
-    "@lg-chat/message": "^2.0.8",
-    "@lg-chat/message-feed": "^2.0.7",
-    "@lg-chat/message-feedback": "^1.0.0",
-    "@lg-chat/message-prompts": "^1.0.2",
-    "@lg-chat/message-rating": "^1.1.3",
+    "@lg-chat/avatar": "^3.0.0",
+    "@lg-chat/chat-disclaimer": "^3.0.0",
+    "@lg-chat/chat-window": "^2.0.0",
+    "@lg-chat/fixed-chat-window": "^2.0.0",
+    "@lg-chat/input-bar": "^4.0.0",
+    "@lg-chat/leafygreen-chat-provider": "^2.0.0",
+    "@lg-chat/message": "^4.0.0",
+    "@lg-chat/message-feed": "^3.0.0",
+    "@lg-chat/message-feedback": "^2.0.0",
+    "@lg-chat/message-prompts": "^2.0.0",
+    "@lg-chat/message-rating": "^2.0.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
     "classnames": "^2.5.1",
