--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -22,7 +22,8 @@
     "eval:conversationQuality": "../mongodb-chatbot-eval/build/main.js evaluate --name conversationQuality --config ./build/eval.config.js",
     "eval:conversationFaithfulness": "../mongodb-chatbot-eval/build/main.js evaluate --name conversationFaithfulness --config ./build/eval.config.js",
     "pipeline:conversationQualityCheck": "node ./build/pipelines/conversationQualityCheck.js",
-    "pipeline:faqConversationQualityCheck": "node ./build/pipelines/faqConversationQualityCheck.js"
+    "pipeline:faqConversationQualityCheck": "node ./build/pipelines/faqConversationQualityCheck.js",
+    "pipeline:llmConversationQualityCheck": "node ./build/pipelines/llmConversationQualityCheck.js"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
