Add first verified answer

--- a/packages/mongodb-chatbot-verified-answers/example-verified-answers.yaml
+++ b/packages/mongodb-chatbot-verified-answers/example-verified-answers.yaml
@@ -3,14 +3,13 @@
   answer: To verify an answer...
   author_email: someone@example.com
   references:
-    - uri: http://example.com
+    - url: http://example.com
       title: Example
-  hidden: true
 - questions:
     - Why did the chicken cross the road?
   answer: To get to the other side.
   author_email: someone@example.com
   hidden: true
   references:
-    - uri: http://example.com
+    - url: http://example.com
       title: Example
