--- a/verified-answers.yaml
+++ b/verified-answers.yaml
@@ -3,12 +3,12 @@
     - Register for Atlas
     - Sign up for Atlas
   answer: |
-    To register for Atlas today, [visit our registration page](https://www.mongodb.com/cloud/atlas/register).
+    To register for Atlas today, [visit our registration page](https://www.mongodb.com/cloud/atlas/register?tck=docs-chatbot).
 
-    For step-by-step instructions on how to register, [read our tutorial](https://www.mongodb.com/basics/mongodb-atlas-tutorial).
+    For step-by-step instructions on how to register, [read our tutorial](https://www.mongodb.com/basics/mongodb-atlas-tutorial?tck=docs-chatbot).
   author_email: chris.bush@mongodb.com
   references:
-    - url: https://www.mongodb.com/cloud/atlas/register
+    - url: https://www.mongodb.com/cloud/atlas/register?tck=docs-chatbot
       title: MongoDB Atlas Registration
-    - url: https://www.mongodb.com/basics/mongodb-atlas-tutorial
+    - url: https://www.mongodb.com/basics/mongodb-atlas-tutorial?tck=docs-chatbot
       title: MongoDB Atlas Tutorial
