--- a/packages/mongodb-artifact-generator/package.json
+++ b/packages/mongodb-artifact-generator/package.json
@@ -14,7 +14,7 @@
     "README.md"
   ],
   "bin": {
-    "eai-generator": "./build/main.js"
+    "mongodb-ai": "./build/main.js"
   },
   "scripts": {
     "clean": "rm -rf build",
