--- a/packages/mongodb-chatbot-verified-answers/package.json
+++ b/packages/mongodb-chatbot-verified-answers/package.json
@@ -33,7 +33,8 @@
     "clean": "rm -rf build",
     "build": "tsc -b tsconfig.build.json",
     "test": "jest --forceExit",
-    "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
+    "lint": "eslint ./src --ext ts,tsx,js,jsx --report-unused-disable-directives",
+    "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
     "release": "release-it"
   },
