--- a/packages/mongodb-rag-ingest/package.json
+++ b/packages/mongodb-rag-ingest/package.json
@@ -41,7 +41,8 @@
     "postbuild": "chmod +x build/main.js",
     "watch": "tsc -b -w",
     "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js --forceExit",
-    "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
+    "lint": "eslint ./src --ext ts,tsx,js,jsx --report-unused-disable-directives",
+    "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
     "release": "release-it"
   },
