--- a/examples/quick-start/packages/ui/package.json
+++ b/examples/quick-start/packages/ui/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "preview": "vite preview"
   },
   "dependencies": {
