--- a/.drone.yml
+++ b/.drone.yml
@@ -300,7 +300,8 @@ steps:
       namespace: docs
       release: chat-server-qa
       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-qa,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=dev-rel-generator.docs.staging.corp.mongodb.com
-      values_files: ["packages/mongodb-chatbot-server/environments/dev-rel.yml"]
+      values_files:
+        ["packages/chatbot-server-mongodb-public/environments/dev-rel.yml"]
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
