--- a/.drone.yml
+++ b/.drone.yml
@@ -298,7 +298,7 @@ steps:
       chart_version: 4.12.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: docs
-      release: chat-server-qa
+      release: chat-server-dev-rel
       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-qa,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=dev-rel-generator.docs.staging.corp.mongodb.com
       values_files:
         ["packages/chatbot-server-mongodb-public/environments/dev-rel.yml"]
