Add variants to verified answers

--- a/verified-answers.yaml
+++ b/verified-answers.yaml
@@ -2,6 +2,8 @@
     - How do I register for Atlas?
     - Register for Atlas
     - Sign up for Atlas
+    - How do I set up an Atlas account?
+    - Create an Atlas account
   answer: |
     To register for Atlas today, [visit our registration page](https://www.mongodb.com/cloud/atlas/register?tck=mongodb_ai_chatbot).
 
