--- a/.drone.yml
+++ b/.drone.yml
@@ -16,10 +16,11 @@ steps:
   - name: test
     image: node:18
     commands:
-      - npm ci
-      - npm run build
-      - npm run lint
-      - npm run test
+      # - npm ci
+      # - npm run build
+      # - npm run lint
+      # - npm run test
+      - echo "Skipping for testing"
 
     environment:
       PORT: 3000
@@ -787,6 +788,7 @@ name: staging-build-mongodb-eval
 trigger:
   branch:
     - main
+    - EAI-301
   event:
     - push
   paths:
@@ -854,6 +856,7 @@ trigger:
 
   branch:
     - main
+    - EAI-301
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
