--- a/packages/mongodb-chatbot-server/package.json
+++ b/packages/mongodb-chatbot-server/package.json
@@ -62,6 +62,7 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@langchain/anthropic": "^0.1.9",
     "@types/common-tags": "^1.8.1",
     "@types/connect-timeout": "^0.0.37",
     "@types/cors": "^2.8.13",
