--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@cdxoo/dbscan": "^1.1.1",
     "@release-it/bumper": "^5.1.0",
+    "@stdlib/random-sample": "^0.2.1",
     "csv": "^6.3.1",
     "dotenv": "^16.3.1",
     "mongodb-chatbot-server": "*",
