--- a/packages/mongodb-chatbot-evaluation/testData/expected_links_tests.yaml
+++ b/packages/mongodb-chatbot-evaluation/testData/expected_links_tests.yaml
@@ -4,7 +4,6 @@
   messages:
     - role: user
       content: and
-  expectation: "N/A"
   expectedLinks:
     - reference/operator/query/and
     - reference/operator/aggregation/and
@@ -15,7 +14,6 @@
   messages:
     - role: user
       content: or
-  expectation: "N/A"
   expectedLinks:
     - reference/operator/query/or
     - reference/operator/aggregation/or
@@ -26,5 +24,5 @@
   messages:
     - role: user
       content: not
-  expectation: "N/A"
+  expectedLinks: []
   # no expected links
